# UST-pythonweb-hw-06

./: .env.example  README.md  alembic.ini  connect.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 4a1ebd3760a8_init_schema.py
