[project]
name = "homework-6"
version = "0.1.0"
description = "UST-pythonweb-hw-06 — SQLAlchemy + Alembic + Postgres"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.9",
    "faker>=30.0.0",
    "python-dotenv>=1.0.1",
]
